@@ -16,12 +16,13 @@
  */
 package org.apache.kafka.common.security.scram;
 
+import org.apache.kafka.common.utils.Base64;
+
 import java.nio.charset.StandardCharsets;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import javax.security.sasl.SaslException;
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * SCRAM request/response message creation and parsing based on
@@ -140,7 +141,7 @@ public class ScramMessages {
             }
             this.nonce = matcher.group("nonce");
             String salt = matcher.group("salt");
-            this.salt = DatatypeConverter.parseBase64Binary(salt);
+            this.salt = Base64.decoder().decode(salt);
         }
         public ServerFirstMessage(String clientNonce, String serverNonce, byte[] salt, int iterations) {
             this.nonce = clientNonce + serverNonce;
@@ -157,7 +158,7 @@ public class ScramMessages {
             return iterations;
         }
         String toMessage() {
-            return String.format("r=%s,s=%s,i=%d", nonce, DatatypeConverter.printBase64Binary(salt), iterations);
+            return String.format("r=%s,s=%s,i=%d", nonce, Base64.encoder().encodeToString(salt), iterations);
         }
     }
     /**
@@ -184,9 +185,9 @@ public class ScramMessages {
             if (!matcher.matches())
                 throw new SaslException("Invalid SCRAM client final message format: " + message);
 
-            this.channelBinding = DatatypeConverter.parseBase64Binary(matcher.group("channel"));
+            this.channelBinding = Base64.decoder().decode(matcher.group("channel"));
             this.nonce = matcher.group("nonce");
-            this.proof = DatatypeConverter.parseBase64Binary(matcher.group("proof"));
+            this.proof = Base64.decoder().decode(matcher.group("proof"));
         }
         public ClientFinalMessage(byte[] channelBinding, String nonce) {
             this.channelBinding = channelBinding;
@@ -206,13 +207,13 @@ public class ScramMessages {
         }
         public String clientFinalMessageWithoutProof() {
             return String.format("c=%s,r=%s",
-                    DatatypeConverter.printBase64Binary(channelBinding),
+                    Base64.encoder().encodeToString(channelBinding),
                     nonce);
         }
         String toMessage() {
             return String.format("%s,p=%s",
                     clientFinalMessageWithoutProof(),
-                    DatatypeConverter.printBase64Binary(proof));
+                    Base64.encoder().encodeToString(proof));
         }
     }
     /**
@@ -243,7 +244,7 @@ public class ScramMessages {
                 // ignore
             }
             if (error == null) {
-                this.serverSignature = DatatypeConverter.parseBase64Binary(matcher.group("signature"));
+                this.serverSignature = Base64.decoder().decode(matcher.group("signature"));
                 this.error = null;
             } else {
                 this.serverSignature = null;
@@ -264,7 +265,7 @@ public class ScramMessages {
             if (error != null)
                 return "e=" + error;
             else
-                return "v=" + DatatypeConverter.printBase64Binary(serverSignature);
+                return "v=" + Base64.encoder().encodeToString(serverSignature);
         }
     }
 }
